fix: scrollbars

--- a/css/fixup.less
+++ b/css/fixup.less
@@ -1,3 +1,7 @@
+.plugin-bpmnio > div {
+    overflow: auto;
+}
+
 .plugin-bpmnio svg {
     height: 100%;
     width: 100%;
